<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
	android:id="@+id/widget0"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
<Button
	android:id="@+id/btnNotice"
	android:layout_width="134dp"
	android:layout_height="wrap_content"
	android:padding="2dp"
	android:layout_marginTop="2dp"
	android:layout_marginBottom="2dp"
	android:text="@string/strNotice"
	android:textStyle="bold"
	android:layout_x="15dp"
	android:layout_y="35dp" />
<Button
	android:id="@+id/btnCardInfo"
	android:layout_width="137dp"
	android:layout_height="wrap_content"
	android:text="@string/strCardInfo"
	android:textStyle="bold"
	android:layout_x="12dp"
	android:layout_y="89dp" />
<Button
	android:id="@+id/btnPersonalNotice"
	android:layout_width="134dp"
	android:layout_height="wrap_content"
	android:text="@string/strPersonalNotice"
	android:textStyle="bold"
	android:layout_x="167dp"
	android:layout_y="33dp" />
<Button
	android:id="@+id/btnTransfer"
	android:layout_width="141dp"
	android:layout_height="wrap_content"
	android:text="@string/strTransfer"
	android:textStyle="bold"
	android:layout_x="9dp"
	android:layout_y="138dp" />
<Button
	android:id="@+id/btnTrjnQuery"
	android:layout_width="138dp"
	android:layout_height="wrap_content"
	android:text="@string/strTrjnQuery"
	android:textStyle="bold"
	android:layout_x="164dp"
	android:layout_y="84dp" />
<Button
	android:id="@+id/btnPayNetFee"
	android:layout_width="145dp"
	android:layout_height="wrap_content"
	android:text="@string/strPayNetFee"
	android:textStyle="bold"
	android:layout_x="8dp"
	android:layout_y="189dp" />
<Button
	android:id="@+id/btnPayPowerFee"
	android:layout_width="139dp"
	android:layout_height="wrap_content"
	android:text="@string/strPayPowerFee"
	android:textStyle="bold"
	android:layout_x="163dp"
	android:layout_y="190dp" />
<Button
	android:id="@+id/btnSetCardLoss"
	android:layout_width="137dp"
	android:layout_height="wrap_content"
	android:padding="2dp"
	android:layout_marginTop="2dp"
	android:layout_marginBottom="2dp"
	android:text="@string/strSetCardLoss"
	android:textStyle="bold"
	android:layout_x="164dp"
	android:layout_y="138dp" />
<Button
	android:id="@+id/btnPhoneAddress"
	android:layout_width="145dp"
	android:layout_height="wrap_content"
	android:text="@string/strPhoneAddr"
	android:textStyle="bold"
	android:layout_x="6dp"
	android:layout_y="244dp" />
<Button
	android:id="@+id/btnWebkit"
	android:layout_width="141dp"
	android:layout_height="wrap_content"
	android:text="@string/strWebKit"
	android:textStyle="bold"
	android:layout_x="161dp"
	android:layout_y="243dp" />
<Button
	android:id="@+id/btnWeather"
	android:layout_width="139dp"
	android:layout_height="wrap_content"
	android:text="@string/strWeatherReport"
	android:textStyle="bold"
	android:gravity="center"
	android:layout_x="8dp"
	android:layout_y="292dp" />
<Button
	android:id="@+id/btnTestTool"
	android:layout_width="141dp"
	android:layout_height="wrap_content"
	android:text="@string/strToolUse"
	android:textStyle="bold"
	android:gravity="center"
	android:layout_x="161dp"
	android:layout_y="291dp" />
<Button
	android:id="@+id/btnTestDB"
	android:layout_width="141dp"
	android:layout_height="wrap_content"
	android:text="@string/strTestDB"
	android:textStyle="bold"
	android:layout_x="9dp"
	android:layout_y="342dp" />
<Button
	android:id="@+id/btnTestDemo"
	android:layout_width="141dp"
	android:layout_height="wrap_content"
	android:text="@string/strTestDemo"
	android:textStyle="bold"
	android:layout_x="161dp"
	android:layout_y="340dp" />
</AbsoluteLayout>
