<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/widget46"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">
<TextView
	android:layout_width="71dp"
	android:layout_height="30dp"
	android:text="@string/strUserAccount"
	android:textStyle="bold" />
<EditText
	android:id="@+id/lblUserName"
	android:layout_width="214dp"
	android:layout_height="wrap_content"
	android:textSize="18sp"
	android:textStyle="bold" />
<TextView
	android:layout_width="70dp"
	android:layout_height="31dp"
	android:text="@string/strPassword"
	android:textStyle="bold" />
<EditText
	android:id="@+id/lblPassword"
	android:layout_width="220dp"
	android:layout_height="wrap_content"
	android:textSize="18sp"
	android:textStyle="bold"
	android:password="true" />
<Button
	android:id="@+id/btnLogin"
	android:layout_width="56dp"
	android:layout_height="wrap_content"
	android:text="@string/strBtnOK"
	android:textStyle="bold" />
</LinearLayout>
